Corrected alignment

--- a/ICE1/CSS/ICE1.css
+++ b/ICE1/CSS/ICE1.css
@@ -6,3 +6,11 @@ section {
   display: inline-block;
   margin: auto;
 }
+
+.about-me{
+  display: inline-block;
+}
+
+nav ul{
+  display: inline-block;
+}
